Rename /order route to /orders
